<resources>
    <string name="app_name">k4mMerchant</string>
    <string name="first_start_status">first_start_status</string>
    <string name="registerBusinessUser">REGISTER AS BUSINESS USER</string>
    <string name="joinNow">Join Now</string>
    <string name="toc">By joining, you agree to our Terms and Conditions and Privacy Policy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="kash4meLogo">Kash4Me Logo</string>
    <string name="verifyText">Please enter the code sent in email</string>
    <string name="places_api_key">AIzaSyAChUMPawz2tD7cNAaNXBSzTtVarQsqESs</string>
    <string name="add">Add</string>
    <string name="please_enter_percentage">Please enter percentage</string>
    <string name="please_enter_cashback_amount">Please enter cashback amount</string>
    <string name="please_enter_limit_amount">Please enter limit amount</string>
    <string name="please_enter_spend_amount">Please enter spend amount</string>
    <string name="add_tags_so_that_user_can_search_using_this_tags">Add tags so that user can search using this tags</string>
    <string name="add_tags_here">Add tags here</string>
    <string name="finish">Finish</string>
    <string name="view_branches">View Branches</string>
    <string name="customer_name">Customer Name</string>
    <string name="cash_back_earned">Cash back earned</string>
    <string name="yet_to_spend_succeeding_a_colon">Yet to Spend:&#160;</string>
    <string name="yet_to_spend">Yet to Spend</string>
    <string name="processing_succeeding_a_colon">Processing:&#160;</string>
    <string name="dummy_code">BXT100000</string>
    <string name="total_earned">Total Earned</string>
    <string name="processing">Processing</string>
    <string name="recent_cash_back">Recent Cash Back</string>
    <string name="dummy_amount">$15.00</string>
    <string name="spent">Spent</string>
    <string name="left">Left</string>
    <string name="scan_qr_code_to_assign_cash_back">Scan QR code to assign cash back</string>
    <string name="assign_cash_back">Assign Cash Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="merchant_enter_purchase_amount_description">Enter the amount purchased by the customer. This amount will be used to calculate the cash back amount to be given to the customer. Customers could see the balance right after you assign cash bac to them.</string>
    <string name="enter_purchase_amount">Enter purchase amount</string>
    <string name="cash_back_value">Cashback value</string>
    <string name="send">Send</string>
    <string name="cashback_sent">Cashback Sent</string>
    <string name="thank_you_for_using_kash4me_your_cash_back_has_been_successfully_assigned_to_jacky_man_bxt100">Thank you for using Kash4Me. Your cash back has been successfully assigned to %1$s (%2$s)</string>
    <string name="thank_you_for_using_kash4me_your_purchase_return_has_been_successful">Thank you for using Kash4Me. Your purchase return has been successful</string>
    <string name="done">Done</string>
    <string name="dummy_date">2022/04/09</string>
    <string name="enter_amount_to_withdraw">Enter amount to withdraw</string>
    <string name="available_balance">Available balance</string>
    <string name="enter_email_address_to_interact">Enter email address to interact</string>
    <string name="enter_email_address_if_different_from_profile">Enter email address if different from profile</string>
    <string name="total_sell">TOTAL SELL</string>
    <string name="edit">Edit</string>
    <string name="contact_information">Contact Information</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="dummy_merchant_email_address">merchant1@yopmail.com</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="enter_amount">Enter amount</string>
    <string name="cashback_type">Cashback Type</string>
    <string name="amount_and_limit">Amount and Limit</string>
    <string name="zip_code">Zip Code</string>
    <string name="zip_or_postal_code">Zip/Postal Code</string>
    <string name="please_enter_zip_code">Please enter zip code</string>
    <string name="login_as_business_user">Login as business user</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="not_a_member">Not a Member?</string>
    <string name="join_now">Join Now</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="person">Person</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="qr" translatable="false">QR</string>
    <string name="notification">Notification</string>
    <string name="deposit_cashback">Deposit Cashback</string>
    <string name="how_it_works">How it works</string>
    <string name="whats_new">What\'s new</string>
    <string name="cashback_settings">Cashback Settings</string>
    <string name="image_settings">Image Settings</string>
    <string name="send_cashback_code">Send Cashback Code</string>
    <string name="announcement">Announcement</string>
    <string name="announcements">Announcements</string>
    <string name="language_settings">Language Settings</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log out</string>
    <string name="infobox">Infobox</string>
    <string name="coming_soon">Coming soon</string>
    <string name="changing_language_requires_app_restart">Changing language requires app restart</string>
    <string name="view_profile">View Profile</string>
    <string name="cashback">Cashback</string>
    <string name="flat">Flat</string>
    <string name="percentage">Percentage</string>
    <string name="spend">Spend</string>
    <string name="get">Get</string>
    <string name="customer_gets_xx_on_required_amount_spent">Customer gets %1$s on required amount spent</string>
    <string name="customer_needs_to_spend_xx_amount_to_get_cash_back">Customer needs to spend %1$s amount to get cash back</string>
    <string name="customer_earns_xx_on_each_purchase_made_at_the_store">Customer earns XX % on each purchase made at the store</string>
    <string name="limit">Limit</string>
    <string name="customer_needs_to_earn_xx_amount_to_be_able_to_withdraw_amount">Customer needs to earn XX amount to be able to withdraw amount</string>
    <string name="update">Update</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="nickname">Nickname</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="postal_code">Postal Code</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="request_cashback">Request Cashback</string>
    <string name="your_qr_code_below_contains_the_information_required_for_store_to_assign_you_the_cash_back">Your QR code below contains the information required for store to assign you the cash back.</string>
    <string name="show_this_qr_code_to_the_cashier_in_the_store">Show this QR code to the cashier in the store.</string>
    <string name="send_email">Send Email</string>
    <string name="thank_you_for_using_kash4me_your_cash_back_has_been_assigned_to_the_customer">Thank you for using Kash4me. Your cash back has been assigned to the customer.</string>
    <string name="close">Close</string>
    <string name="on_every_100_spend">On Every $100 Spent</string>
    <string name="dollar_150_00">$150.00</string>
    <string name="earn_cashback">Earn Cash Back</string>
    <string name="Distance_150_00_km">150.00 KM</string>
    <string name="show_this_qr_code_to_merchant_and_get_cash_back_assigned_merchant_will_scan_and_give_you_cash_back">Show this QR code to merchant and get cash back assigned. Merchant will scan and give you cash back.</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including_versions_of_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="go_there">Go There</string>
    <string name="dollar_40_00">$40.00</string>
    <string name="loading">Loading...</string>
    <string name="basic_info">Basic Info</string>
    <string name="select_language">Select Language</string>
    <string name="next">Next</string>
    <string name="please_confirm_below_information_are_correct">Please confirm below information are correct</string>
    <string name="your_nickname">Your nickname</string>
    <string name="country">Country</string>
    <string name="your_country">Your country</string>
    <string name="postal_code_here">Postal code here</string>
    <string name="your_date_of_brith_here">Your date of brith here</string>
    <string name="your_phone_number_here">Your phone number here...</string>
    <string name="find_your_cashback_card">Find your cashback card</string>
    <string name="earned">Earned</string>
    <string name="dummy_name">Bipin Khanal</string>
    <string name="find_store">Find store</string>
    <string name="a_to_z">A~Z</string>
    <string name="nearest">Nearest</string>
    <string name="the_amount_in_green_is_the_amount_you_can_withdraw_anytime_and_processing_amount_might_take_1_2_business_days_to_go_to_green">The amount in Green is the amount you can withdraw anytime and Processing amount might take 1-2 business days to go to green.</string>
    <string name="withdraw_cash">Withdraw Cash</string>
    <string name="withdraw_">Withdraw</string>
    <string name="transactions">Transactions</string>
    <string name="business_info">Business Info</string>
    <string name="business_name">Business Name</string>
    <string name="add_your_address">Add Your Address</string>
    <string name="dollar_100_00">$100.00</string>
    <string name="dollar_20_00">$20.00</string>
    <string name="already_have_account_login_here">Already have account? Login here</string>
    <string name="processing_dollar_100">Processing: $100</string>
    <string name="last_visit_2022_06_07">Last Visit: 2022/06/07</string>
    <string name="yet_to_spend_description">This is the amount you need to spend to make the cashback available to withdraw.</string>
    <string name="processing_description">This amount is in progress make it available to your Balance. It might take 1-2 business days to reflect in Cash Balance.</string>
    <string name="password_requirement">Note: Password must be minimum 8 characters and contain 1 uppercase, 1 number and 1 special character like #,@,!,% etc.</string>
</resources>