<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/customerHomeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/customerSearchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/customerTotalTransactionFragment"
        android:enabled="true"
        android:icon="@drawable/ic_money"
        android:title="@string/cashback" />
    <item
        android:id="@+id/announcementsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_announcement"
        android:title="@string/announcements" />
    <item
        android:id="@+id/customerProfileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/person" />
</menu>