<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    tools:context=".ui.activity.customer.merchant_details.merchant_details_info.MerchantDetailsInfoBottomSheet">

    <TextView
        android:id="@+id/tv_total_earned_title"
        style="@style/Title3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grayText"
        android:text="@string/total_earned" />

    <TextView
        android:id="@+id/tv_total_earned_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="Some description regarding total earned will come here."
        android:textColor="@color/primary_text_color" />

    <TextView
        android:id="@+id/tv_yet_to_spend_title"
        style="@style/Title3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/grayText"
        android:text="@string/yet_to_spend" />

    <TextView
        android:id="@+id/tv_yet_to_spend_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/yet_to_spend_description"
        android:textColor="@color/primary_text_color" />

    <TextView
        android:id="@+id/tv_processing_title"
        style="@style/Title3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/grayText"
        android:text="@string/processing" />

    <TextView
        android:id="@+id/tv_processing_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/processing_description"
        android:textColor="@color/primary_text_color" />

</LinearLayout>