<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/backgroundbox"
    android:orientation="vertical"
    android:padding="8dp"
    android:weightSum="3">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/customerNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_name"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/earnedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/dollar_40_00"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            app:autoSizeTextType="uniform" />

    </LinearLayout>

    <TextView
        android:id="@+id/processingTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/orange"
        android:text="@string/processing_dollar_100"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"

        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/lastVisitDateTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/last_visit_2022_06_07" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:orientation="vertical"
            android:paddingStart="4dp">

            <TextView
                android:id="@+id/spentLTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spent"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:id="@+id/spentTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/dollar_100_00"
                android:textColor="@color/blue"
                android:fontFamily="sans-serif-medium"
                app:autoSizeTextType="uniform" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/leftLTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:id="@+id/leftTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/dollar_20_00"
                android:textColor="@android:color/holo_orange_dark"
                android:fontFamily="sans-serif-medium"
                app:autoSizeTextType="uniform" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>