<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.register.RegisterFragment">

    <include
        android:id="@+id/stepper"
        layout="@layout/registration_stepper_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/stepper">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:layout_marginTop="8dp"
        app:errorIconDrawable="@null"
        app:layout_constraintTop_toBottomOf="@id/emailET">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/confirmPassword"
        app:errorIconDrawable="@null"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/passwordET">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password_criteria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/password_requirement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/cPasswordET" />

    <CheckBox
        android:id="@+id/businessUserCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/registerBusinessUser"
        app:layout_constraintTop_toBottomOf="@id/tv_password_criteria" />

    <Button
        android:id="@+id/joinBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/joinNow"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/businessUserCB" />

    <Button
        android:id="@+id/loginBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="16dp"
        android:text="@string/already_have_account_login_here"
        android:textColor="@color/linkBlue"
        app:layout_constraintTop_toBottomOf="@id/joinBtn" />

    <TextView
        android:id="@+id/tocTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/toc"
        android:textColorLink="@color/linkBlue"
        app:layout_constraintTop_toBottomOf="@id/loginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>